--- a/Crossfit-Dashboard/index.html
+++ b/Crossfit-Dashboard/index.html
@@ -96,8 +96,8 @@
           <svg class="my-4" id="myChart" width="900" height="960" font-family="sans-serif" font-size="10" text-anchor="middle"></svg>
           <h1 class ="h2 border-bottom pb-2">Top Movement Vs Mainsite</h1>
           <div id="mytoptrends"></div>
-          <h1 class ="h2 border-bottom pb-2">Top 5 Biggest Differences</h1>
-          <svg class="my-4" id="myTop5Diffs" width="900" height="960" font-family="sans-serif" font-size="10" text-anchor="middle"></svg>
+          <!--<h1 class ="h2 border-bottom pb-2">Top 5 Biggest Differences</h1>-->
+          <!--<svg class="my-4" id="myTop5Diffs" width="900" height="960" font-family="sans-serif" font-size="10" text-anchor="middle"></svg>-->
         </main>
       </div>
     </div>
@@ -121,6 +121,9 @@
     <!-- Graphs -->
     <script src="https://d3js.org/d3.v4.min.js"></script>
     <script src="utils/utils.js"></script>
+    <script src="https://d3js.org/d3-color.v1.min.js"></script>
+    <script src="https://d3js.org/d3-interpolate.v1.min.js"></script>
+    <script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
     <script src="barChart/barchart.js"></script>
     <script src="bubbleChart/BubbleChart.js"></script>
     <script>
